Refreshes handled, added columns guessed and numberOfTries to correct number

--- a/game/templates/game/winningPage.html
+++ b/game/templates/game/winningPage.html
@@ -6,7 +6,7 @@
         <label for="correctNumber">Number to guess: {{ correctNumber.number }}</label>
         <p>Number extracted: {{ numberExtracted }}</p>
         <h1>YOU WIN!!</h1>
-        <h3></h3>
+        <p>Total tries: {{ correctNumber.numberOfGuesses }}</p>
         <form action="{% url 'newGame' %}" method="post">{% csrf_token %}
             <input type="submit" class="btn btn-success" value="Start new Game">
         </form>
