--- a/game/templates/game/gamePage.html
+++ b/game/templates/game/gamePage.html
@@ -1,13 +1,17 @@
 {% load bootstrap5 %}
 {% bootstrap_css %}
 {% bootstrap_javascript %}
-<div class="position-static">
-    <div class="position-absolute top-50 start-50 translate-middle">
+{% load static %}
+
+<link rel="stylesheet" href="{% static 'game/style.css' %}">
+
+<div class="position-static container">
+    <div class="position-absolute top-50 start-50 translate-middle content">
         <label for="correctNumber">Number to guess: {{ correctNumber.number }}</label>
         <br>
         <br>
         <form action="{% url 'newNumber' %}" method="post">{% csrf_token %}
-            <input type="submit" class="btn btn-primary" value="Try your luck">
+            <input type="submit" class="btn btn-primary try" value="Try your luck">
         </form>
         <p>Number extracted: {{ numberExtracted }}</p>
     </div>
