--- a/game/templates/game/gamePage.html
+++ b/game/templates/game/gamePage.html
@@ -1,18 +1,15 @@
-{% load bootstrap5 %}
-{% bootstrap_css %}
-{% bootstrap_javascript %}
-{% load static %}
+{% extends "base.html" %}
 
-<link rel="stylesheet" href="{% static 'game/style.css' %}">
-
+{% block content %}
 <div class="position-static container">
     <div class="position-absolute top-50 start-50 translate-middle content">
         <label for="correctNumber">Number to guess: {{ correctNumber.number }}</label>
         <br>
         <br>
         <form action="{% url 'newNumber' %}" method="post">{% csrf_token %}
-            <input type="submit" class="btn btn-primary try" value="Try your luck">
+            <input type="submit" class="btn btn-primary" value="Try your luck">
         </form>
         <p>Number extracted: {{ numberExtracted }}</p>
     </div>
 </div>
+{% endblock content %}
